# pypowerbi

./: .gitignore  DEVELOPMENT.md  pyproject.toml
pypowerbi/: activity_logs.py  base.py  client.py  credentials.py  dataset.py  datasets.py  enums.py  features.py  gateway.py  gateways.py  group.py  group_user.py  groups.py  import_class.py  imports.py  report.py  reports.py  utils.py
pypowerbi/tests/: credentials_tests.py  dataset_tests.py  imports_tests.py  powerbiclient_json_tests.py  powerbiclient_tests.py  settings.py  utils_tests.py
