[tool.poetry]
name = "pypowerbi"
version = "0.26"
description = "A python library for Microsoft's PowerBI."
authors = ["Chris Berry <chris@chrisberry.com.au>"]
maintainers = ["Ben <benvdh@github.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/lucasfcnunes/pypowerbi"
documentation = ""
keywords = ["Power BI", "Poetry"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
adal = "^1.2.6"
future-fstrings = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylama = "^7.7.1"

[tool.poetry.scripts]


[tool.poetry.urls]
issues = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
# line-length = 88
# target-version = ['py36']
include = '\.pyi?$'
extend-exclude = '''
/(
      \.venv
    # The following are specific to Black, you probably don't want those.
    | blib2to3
    | tests/data
    | profiling
)/
'''
