[tool.poetry]
name = "pypowerbi"
version = "0.26"
description = "A python library for Microsoft's PowerBI."
authors = ["Chris Berry <chris@chrisberry.com.au>"]
maintainers = ["Ben <benvdh@github.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/lucasfcnunes/pypowerbi"
documentation = ""
keywords = ["Power BI", "Poetry"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
adal = "^1.2.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
